src/static/pycontw-2019/styles/_index-partners.scss
@import 'index-mixins';

.index-partners {
	@include index-section();
	@include circle-background-section();

	> .container {
		@include container(904px);
		padding-bottom: 8px;
	}

	h3 {
		text-transform: capitalize;
	}

	.partners {
		$item-spacing: 32px;

		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		margin: 32px 0;
		padding: 0;
		border-bottom: 2px solid $white;
		list-style: none inside;

		&::after {
			content: '';
			width: 100%;
			height: 48px;
			border-bottom: 1px solid #dad0ea;
		}

		@include on-desktop() {
			margin: 32px #{0 - $item-spacing};
		}

		> li {
			flex: 1;
			text-align: center;
			margin: $item-spacing / 2;

			@include on-desktop() {
				flex: 0 1 calc(33.3333% - #{$item-spacing});
			}

			> a {
				img, > span {
					position: relative;
					z-index: $background-deco-index + 1;
					min-width: 120px;
					max-width: 320px;
					height: 64px;
					line-height: 64px;
					vertical-align: middle;
					font-size: 175%;

					@include on-desktop() {
						max-width: 100%;
					}
				}
			}
		}
	}

	&::before {
		@include grass-python-logo('../assets/grass-blue.svg', 200px);
		position: absolute;
		top: 0;
		right: 0;
		transform: rotate(-135deg);
	}

}

.sponsorship {
	@include bgimg-hover-button($elf-green, url('../assets/button-hover-bg.svg'));
	font-size: 1.75rem;
	text-shadow: 1px 1px 0 #058550;
}

.sponsor-form-block {
	position: relative;
	padding: 0px 0px 50px 0px;
	.sponsor-container{
		@include index-section;
		@include container(960px);
		display: flex;
		flex-flow: row wrap;
		background: #e7f5ef;
		border-radius: 12px;
		justify-content: center;
		align-items:flex-end;
		padding-top: 40px; 
		padding-bottom: 50px; 
	}
	&::after {
		@include grass-python-logo('../assets/grass-blue.svg', 200px);
		position: absolute;
		bottom: 0;
		left: 0;
		transform: rotate(45deg);
	}
}


@media (max-width: 760px) {
	.index-partners {
		&::before{
			display: none;
		}
	}
	.sponsor-form-block {
		&::after {
			display: none;
		}
	}
}

